
- #86, #88: In-template resources failed for external templates.

- #89: The file monitoring could make the CPU go to 100%. [b6d]

- #81: positions.rst example was out of date.

- Dropped Python 3.2 support, because docutils doesn't seem to
  work on Python 3.2 any longer. With docutils 0.9 it probably
  still works.

- Updated tests to work with newer Pygments.


2.0 (2015-06-14)
----------------

- Better support for :class:. [fahhem]

- Now supports data-perspective. [fahhem]

- Fixed typos in template.py. [fahhem, ggtools]


2.0b1 (2014-11-27)
------------------

- IMPORTANT! The positioning has been reimplemented. The most important change
  is that there is no longer any calculation of relative movement when you use
  absolute coordinates. Therefore, if you use absolute coordinates on some slides
  and then have no coordinates on other slides, your positioning may no longer
  be correct with version 2.0.

- IMPORTANT! Moved the "note" XML transformation into the templates, as this is an
  impress.js feature, and other libraries, such as Reveal.js, will render it
  differently. If you make your own templates, you need to update them accordingly!

- Relative coordinates (starting with r) are now supported for all positioning,
  attributes including rotation and scaling.

- Now includes a server-mode, that will serve the presentation via http and
  also re-generate the presentation if the source-files change.

- Images can now also have a :class: attribute.

- Added support for multiple levels of slides. This is to make it able
  to support for example Reveal.js through external templates.


1.1 (2013-03-15)
----------------

- ReST comments are no longer rendered to HTML. [carljm]

- Fixed a bug in the path handling for CSS resources. [carljm]

- Various fixes and improvements in ReST handling. [cjw296]


1.0 (2013-02-22)
----------------

- #1, #2: Add key-binding to pop up the help, a parameter and a presentation
  field setting to not show the help at load.