@@ -1,0 +1,8 @@
+Presentation with an include
+============================
+
+This presentation includes another one.
+
+----
+
+.. include:: simple.rst
